--- a/src/visualisation.ipynb
+++ b/src/visualisation.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2025-02-25 20:53:32.652435: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-02-25 20:53:32.674477: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-02-25 20:53:32.681710: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2025-02-25 20:53:32.696751: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -27,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "audio, _ = librosa.load('/var/data/apnea/datasets/new_mic_dataset/1/00001000-100507_13.wav', sr=16000)\n",
+    "audio, _ = librosa.load('/var/datasets/new_mic_dataset/1/00001000-100507_13.wav', sr=16000)\n",
     "\n",
     "spectrograms = get_mel_spectrograms(audio)"
    ]
@@ -107,7 +95,7 @@
     "ax.set_xlabel(\"Мел-спектрограммы\")\n",
     "ax.set_ylabel(\"Частоты\")\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
@@ -155,11 +143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "big_audio, _ = librosa.load('/var/data/apnea/edf_channels/mic/00001006-100507/00001006-100507%5B001%5D.wav', sr=16000)"
+    "big_audio, _ = librosa.load('/var/data/edf_channels/mic/00001006-100507/00001006-100507%5B001%5D.wav', sr=16000)"
    ]
   },
   {
@@ -203,14 +191,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from tensorflow.keras.utils import plot_model\n",
     "from tensorflow.keras.models import load_model\n",
     "\n",
-    "model_path = '/var/data/apnea/src/vggish/vggish_model.keras'\n",
+    "model_path = '/var/data/src/vggish/vggish_model.keras'\n",
     "model = load_model(model_path)\n",
     "\n",
     "# Визуализация и сохранение в файл\n",
@@ -219,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +220,7 @@
     "\n",
     "data = {}\n",
     "for i in range(len(channels)):\n",
-    "    data[channels[i]] = pyedflib_get_channels('/var/data/apnea/datasets/edf/00001000-100507%5B001%5D.edf', channel_id=channels_id[i])"
+    "    data[channels[i]] = pyedflib_get_channels('/var/data/datasets/edf/00001000-100507%5B001%5D.edf', channel_id=channels_id[i])"
    ]
   },
   {
